# BowPad

./: .editorconfig  .gitignore  .gitmodules  .tgitconfig  BowPad.sln  BowPad.sln.DotSettings  BowPad.slnx  README.md  RibbonNotepad.sln  appveyor.yml  azure-pipelines.yml  build.txt  default.build  default.build.user.tmpl  version.build.in  version.txt
.github/workflows/: codeql-analysis.yml  codeql.yml  msbuild.yml
Languages/: BowPad.po  BowPad.pot  BowPad_de.po  BowPad_fi.po  BowPad_fr.po  BowPad_hu.po  BowPad_it.po  BowPad_ja.po  BowPad_ko.po  BowPad_pl.po  BowPad_pt-br.po  BowPad_pt-pt.po  BowPad_ro.po  BowPad_ru.po  BowPad_sv.po  BowPad_zh-CN.po  BowPad_zh-TW.po  Languages.txt
Languages/ARM64/: BowPad_de.lang  BowPad_fi.lang  BowPad_fr.lang  BowPad_it.lang  BowPad_ja.lang  BowPad_ko.lang  BowPad_pl.lang  BowPad_pt-br.lang  BowPad_pt-pt.lang  BowPad_ro.lang  BowPad_ru.lang  BowPad_sv.lang  BowPad_zh-CN.lang
Languages/x64/: BowPad_de.lang  BowPad_fi.lang  BowPad_fr.lang  BowPad_it.lang  BowPad_ja.lang  BowPad_ko.lang  BowPad_pl.lang  BowPad_pt-br.lang  BowPad_pt-pt.lang  BowPad_pt_pt.lang  BowPad_ro.lang  BowPad_ru.lang  BowPad_sv.lang  BowPad_zh-CN.lang
Languages/x86/: BowPad_de.lang  BowPad_fi.lang  BowPad_fr.lang  BowPad_it.lang  BowPad_ja.lang  BowPad_ko.lang  BowPad_pl.lang  BowPad_pt-br.lang  BowPad_pt-pt.lang  BowPad_pt_pt.lang  BowPad_ro.lang  BowPad_ru.lang  BowPad_sv.lang  BowPad_zh-CN.lang  BowPad_zh_CN.lang
branches/1.0.0/: default.build
branches/1.0.1/: default.build.user.tmpl
branches/1.0.3/: version.build.in
branches/1.0.6/: version.txt
branches/1.0.7/: version.txt
branches/1.0.9/: version.build.in
branches/1.1.1/: version.build.in
branches/1.1.2/: BowPad.sln
branches/1.1.3/: version.build.in
branches/1.1.4/: version.build.in
branches/1.1.5/: version.build.in  version.txt
branches/1.1.8/: version.txt
branches/2.0.12/: version.build.in
branches/2.0.14/: build.txt
branches/2.0.18/: version.txt
branches/2.0.19/: version.build.in
branches/2.0.20/: version.txt
branches/2.0.4/: default.build
branches/2.0.7/: version.txt
branches/2.0.8/: version.txt
branches/2.1.0/: version.build.in
branches/2.1.2/: version.txt
branches/2.2.0/: BowPad.sln  version.txt
branches/2.2.3/: default.build.user.tmpl
branches/2.3.2/: version.txt
branches/2.3.4/: .editorconfig  version.txt
branches/2.3.4/ext/editorconfig-core/: CMakeLists.txt
branches/2.3.4/ext/editorconfig-core/doc/: CMakeLists.txt
branches/2.3.4/ext/editorconfig-core/src/lib/: CMakeLists.txt
branches/2.3.5/: default.build.user.tmpl
docs/: plugins.html
ext/: compact_enc_det.vcxproj  compact_enc_det.vcxproj.filters  uchardet.vcxproj  uchardet.vcxproj.filters
ext/choco/: bowpad.nuspec  chocolateyInstall.ps1
ext/coolsb/: coolsb.vcxproj  coolsblib.cpp  coolscroll.c  coolscroll.cpp  coolscroll.h
ext/editorconfig-core/: CONTRIBUTORS  editorconfig.vcxproj
ext/scintilla/: .hg_archival.txt  .hgignore  .hgtags  Scintilla.vcxproj  Scintilla.vcxproj.filters  cppcheck.suppress  lexlink.js
plugins/: plugins.txt
plugins/Calculate/: Calculate.bpj  Calculate.desc
plugins/Copy/: Copy.bpj  Copy.desc
plugins/CountCharacters/: CountCharacters.bpj  CountCharacters.desc
plugins/CsvJoinLines/: CsvJoinLines.bpj  CsvJoinLines.desc
plugins/DisableClearType/: DisableClearType.bpj  DisableClearType.desc
plugins/EditorSettings/: EditorSettings.bpj  EditorSettings.desc
plugins/HideBookmarkMargin/: HideBookmarkMargin.bpj  HideBookmarkMargin.desc
plugins/JsonFormatter/: JsonFormatter.bpj  JsonFormatter.desc
plugins/SearchSelection/: SearchSelection.bpj  SearchSelection.desc
plugins/SortLines/: Sort selected lines.bpj  SortLines.desc
src/: AboutDlg.cpp  AboutDlg.h  AppUtils.cpp  AppUtils.h  Application.h  AutoComplete.cpp  AutoComplete.h  BPBaseDialog.cpp  BPBaseDialog.h  BowPad.cpp  BowPad.h  BowPad.rc  BowPad.vcxproj  BowPad.vcxproj.filters  COMPtrs.h  ChoseDlg.cpp  ChoseDlg.h  ColorButton.cpp  ColorButton.h  CommandHandler.h  CommandPaletteDlg.cpp  CommandPaletteDlg.h  CorrespondingFileDlg.cpp  CorrespondingFileDlg.h  CustomTooltip.cpp  CustomTooltip.h  DocScroll.cpp  DocScroll.h  Document.cpp  Document.h  DocumentManager.cpp  DocumentManager.h  EditorConfigHandler.cpp  EditorConfigHandler.h  FileTree.cpp  FileTree.h  KeyboardShortcutHandler.cpp  KeyboardShortcutHandler.h  LexStyles.cpp  LexStyles.h  (+41 more)
src/Commands/: CmdBlanks.cpp  CmdBlanks.h  CmdBookmarks.cpp  CmdBookmarks.h  CmdClipboard.cpp  CmdClipboard.h  CmdCodeStyle.cpp  CmdCodeStyle.h  CmdComment.cpp  CmdComment.h  CmdConvertCase.cpp  CmdConvertCase.h  CmdDefaultEncoding.cpp  CmdDefaultEncoding.h  CmdEOL.cpp  CmdEOL.h  CmdEditSelection.cpp  CmdEditSelection.h  CmdFiles.cpp  CmdFiles.h  CmdFindReplace.cpp  CmdFindReplace.h  CmdFolding.cpp  CmdFolding.h  CmdFont.cpp  CmdFont.h  CmdFunctions.cpp  CmdFunctions.h  CmdGotoLine.cpp  CmdGotoLine.h  CmdGotoSymbol.cpp  CmdGotoSymbol.h  CmdHeaderSource.cpp  CmdHeaderSource.h  CmdLanguage.cpp  CmdLanguage.h  CmdLaunch.cpp  CmdLaunch.h  CmdLineNumbers.h  CmdLineWrap.h  (+50 more)
src/CustomLexers/: LexAHK.cxx  LexLog.cxx  LexSimple.cxx  LexSnippets.cxx
src/ExplorerCommandVerb/: ExplorerCommandVerb.vcxproj  compatibility.manifest  dllmain.cpp
src/Setup/: AppXManifest.xml.in  Setup.wxs  Setup64.wxs  StefansTools_setupdialog.pdn  setup.build
src/ShellExtension/: BowPadShellExtension.cpp  BowPadShellExtension.rc  BowPadShellExtension.rc2  BowPadShellExtension.vcxproj  BowPadShellExtension.vcxproj.filters  ClassFactory.cpp  ClassFactory.h  FileContextMenuExt.cpp  FileContextMenuExt.h  Reg.cpp  Reg.h  dllmain.cpp
src/res/: AutoComplete.ini  BowPad.rc2  BowPad.xml  Properties.ini  RibbonNotepad.xml  Shortcuts-internal.ini  Shortcuts.ini  bow ties are cool.pdn  darktheme.ini  drag.cur  drag_interdit.cur  regexHelp.rtf
src/scripting/: BasicScriptHost.cpp  BasicScriptHost.h  test.bpj  (+3 more)
tags/2.1.3/ext/editorconfig-core/src/: CMakeLists.txt
tools/: checkyear.js  coverity.bat
trunk/: BowPad.sln  build.txt  default.build  default.build.user.tmpl  version.build.in  version.txt
(+1638 files in other folders)
